--- a/src/styles.css
+++ b/src/styles.css
@@ -201,6 +201,10 @@ ul {
   width: 95%;
 }
 
+.wrapper3 {
+  margin-bottom: 10px;
+}
+
 .heading {
   display: grid;
   grid-template-columns: 120px 120px 60px;
@@ -251,8 +255,6 @@ ul {
 
 .content {
   display: flex;
-  position: sticky;
-  margin: 0 auto;
   height: 90px;
   border: 1px solid #e6e6e6;
   border-top-color: white;
@@ -265,8 +267,7 @@ ul {
   display: flex;
 }
 
-.hourly-forecast,
-.daily-forecast {
+.hourly-forecast {
   display: flex;
   grid-template-columns: repeat(14, 1fr);
   grid-gap: 45px;
@@ -314,8 +315,25 @@ ul {
   transition: all 200ms ease;
 }
 
-.wrapper3 {
-  margin-bottom: 10px;
+.daily-forecast {
+  display: flex;
+  grid-template-columns: repeat(7, 1fr);
+  width: 100%;
+  text-align: center;
+  align-self: center;
+  justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 14px;
+}
+
+#daily-temp-max {
+  color: #505050;
+  font-weight: 600;
+}
+
+#daily-temp-min {
+  color: #505050;
 }
 
 .footer {
