--- a/src/styles.css
+++ b/src/styles.css
@@ -256,7 +256,7 @@ ul {
 
 .hourly-forecast,
 .daily-forecast {
-  display: flex;
+  display: inherit;
   grid-template-columns: repeat(7, 1fr);
   width: 100%;
   text-align: center;
@@ -275,7 +275,8 @@ ul {
 #hourly-forecast,
 #daily-forecast {
   width: 55px;
-  flex: 0 0 14.28571428571429%;
+  flex: 0 0 14.285714285714295%;
+  transition: all 0.5s;
 }
 
 #daily-temp-max {
