--- a/src/styles.css
+++ b/src/styles.css
@@ -254,7 +254,9 @@ ul {
   display: flex;
 }
 
-.hourly-forecast,
+#hourly-temp,
+#hourly-prec,
+#hourly-wind,
 .daily-forecast {
   display: inherit;
   grid-template-columns: repeat(7, 1fr);
@@ -267,9 +269,21 @@ ul {
   font-size: 14px;
 }
 
-.hourly-forecast {
+#hourly-temp,
+#hourly-prec,
+#hourly-wind {
   grid-template-columns: repeat(24, 1fr);
   overflow: hidden;
+}
+
+#hourly-temp {
+  position: relative;
+}
+
+#hourly-prec,
+#hourly-wind {
+  position: absolute;
+  display: none;
 }
 
 #hourly-forecast,
